--- a/Vue/suseok/index.html
+++ b/Vue/suseok/index.html
@@ -16,7 +16,7 @@
     }
 
     body {
-      background: url(/public/mainImg.png) center center;
+      background: url(/mainImg.png) center center;
       background-size: cover;
       background-repeat: no-repeat;
       height: 100vh;
